src/objects/SEAD_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Days_From_First_Ownership__c</fullName>
        <description>Days from Lead or Opp&apos;s first ownership, part of the exit criteria</description>
        <label>Days From First Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Days_from_Ownership__c</fullName>
        <description>Days from Lead or Opp&apos;s first ownership, part of the exit criteria</description>
        <label>Lead Days from Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_New_Stage_Activity_Limit__c</fullName>
        <label>Lead New Stage Activity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Qualified_Stage_Activity_Limit__c</fullName>
        <label>Lead Qualified Stage Activity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Validated_Stage_Activity_Minimum__c</fullName>
        <label>Lead Validated Stage Activity Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Days_from_Ownership__c</fullName>
        <label>Opp Days from Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_New_Stage_Activity_Limit__c</fullName>
        <label>Opp New Stage Activity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Qualified_Stage_Activity_Limit__c</fullName>
        <label>Opp Qualified Stage Activity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Validated_Stage_Activity_Minimum__c</fullName>
        <label>Opp Validated Stage Activity Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SEAD Configuration</label>
</CustomObject>